src/test/ui/consts/const_fn_trait_bound.stock.stderr
error[E0658]: trait bounds other than `Sized` on const fn parameters are unstable
  --> $DIR/const_fn_trait_bound.rs:8:16
   |
LL | const fn test1<T: std::ops::Add>() {}
   |                ^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn_trait_bound)]` to the crate attributes to enable

error[E0658]: trait objects in const fn are unstable
  --> $DIR/const_fn_trait_bound.rs:10:16
   |
LL | const fn test2(_x: &dyn Send) {}
   |                ^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn_trait_bound)]` to the crate attributes to enable

error[E0658]: trait objects in const fn are unstable
  --> $DIR/const_fn_trait_bound.rs:12:21
   |
LL | const fn test3() -> &'static dyn Send { loop {} }
   |                     ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn_trait_bound)]` to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
